[gd_scene load_steps=3 format=3 uid="uid://booqprtbi4psd"]

[ext_resource type="Script" path="res://components/componentScripts/stat_box.gd" id="1_xj6rk"]
[ext_resource type="Texture2D" uid="uid://dwioyteyrbofc" path="res://images/misc/open-book.png" id="2_imhmt"]

[node name="StatBox" type="Panel"]
custom_minimum_size = Vector2(131, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1789.0
offset_bottom = -1016.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ComponentPanel"
script = ExtResource("1_xj6rk")

[node name="StatName" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 23.0
text = "<Stat Name>"

[node name="LevelBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 51.0
offset_right = 128.0
offset_bottom = 55.0
mouse_filter = 2
value = 50.0
show_percentage = false

[node name="TalentBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 57.0
offset_right = 128.0
offset_bottom = 61.0
mouse_filter = 2
theme_type_variation = &"ProgressTalent"
value = 50.0
show_percentage = false

[node name="BookImage" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 103.0
offset_top = 29.0
offset_right = 128.0
offset_bottom = 54.0
texture = ExtResource("2_imhmt")
expand_mode = 1

[node name="TalentLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 32.0
offset_right = 102.0
offset_bottom = 51.0
text = "0"
horizontal_alignment = 2

[node name="StatLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 32.0
offset_right = 44.0
offset_bottom = 51.0
text = "0"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
